<?xml version="1.0" encoding="UTF-8"?>
<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xmlns="http://maven.apache.org/POM/4.0.0"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	
	<groupId>net.danh</groupId>
	<artifactId>LiteJobs</artifactId>
	<version>1.0</version>
	<packaging>jar</packaging>
	
	<name>LiteJobs</name>
	
	<properties>
		<java.version>17</java.version>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
	</properties>
	
	<build>
		<finalName>${project.name}</finalName>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.11.0</version>
				<configuration>
					<source>${java.version}</source>
					<target>${java.version}</target>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-shade-plugin</artifactId>
				<version>3.5.1</version>
				<configuration>
					<relocations>
						<relocation>
							<pattern>net.xconfig</pattern>
							<shadedPattern>net.danh.libs.xconfig</shadedPattern>
						</relocation>
						<relocation>
							<pattern>org.codemc.worldguardwrapper</pattern>
							<shadedPattern>net.danh.libs.worldguardwrapper</shadedPattern>
						</relocation>
					</relocations>
				</configuration>
				<executions>
					<execution>
						<phase>package</phase>
						<goals>
							<goal>shade</goal>
						</goals>
						<configuration>
							<createDependencyReducedPom>false</createDependencyReducedPom>
						</configuration>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<artifactId>maven-clean-plugin</artifactId>
				<version>3.3.2</version>
				<executions>
					<execution>
						<id>auto-clean</id>
						<phase>initialize</phase>
						<goals>
							<goal>clean</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
		</plugins>
		<resources>
			<resource>
				<directory>src/main/resources</directory>
				<filtering>true</filtering>
			</resource>
		</resources>
	</build>
	
	<repositories>
		<repository>
			<id>papermc</id>
			<url>https://repo.papermc.io/repository/maven-public/</url>
		</repository>
		<repository>
			<id>sonatype</id>
			<url>https://oss.sonatype.org/content/groups/public/</url>
		</repository>
		<repository>
			<id>placeholderapi</id>
			<url>https://repo.extendedclip.com/content/repositories/placeholderapi/</url>
		</repository>
		<repository>
			<id>codemc-repo</id>
			<url>https://repo.codemc.org/repository/maven-public/</url>
		</repository>
		<repository>
			<id>jitpack.io</id>
			<url>https://jitpack.io</url>
		</repository>
		<repository>
			<id>phoenix</id>
			<url>https://nexus.phoenixdevt.fr/repository/maven-public/</url>
		</repository>
	</repositories>
	
	<dependencies>
		<dependency>
			<groupId>io.papermc.paper</groupId>
			<artifactId>paper-api</artifactId>
			<version>1.18.2-R0.1-SNAPSHOT</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>me.clip</groupId>
			<artifactId>placeholderapi</artifactId>
			<version>2.11.5</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>net.Indyuce</groupId>
			<artifactId>MMOItems-API</artifactId>
			<version>6.9.5-SNAPSHOT</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>io.lumine</groupId>
			<artifactId>MythicLib-dist</artifactId>
			<version>1.6.2-SNAPSHOT</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>org.codemc.worldguardwrapper</groupId>
			<artifactId>worldguardwrapper</artifactId>
			<version>1.2.1-SNAPSHOT</version>
			<scope>compile</scope>
		</dependency>
		<dependency>
			<groupId>com.github.InitSync.XConfig</groupId>
			<artifactId>bukkit</artifactId>
			<version>1.1.7</version>
			<scope>compile</scope>
		</dependency>
		<dependency>
			<groupId>org.jetbrains</groupId>
			<artifactId>annotations</artifactId>
			<version>24.0.1</version>
			<scope>compile</scope>
		</dependency>
	</dependencies>
</project>
